# bunsen-yaru-gtk

./: README.md  meson.build  meson_options.txt
common/: meson.build
debian/: README.Debian  bunsen-yaru-gtk.docs  changelog  control  copyright
gtk/src/: index.theme.in  meson.build
openbox/: meson.build
openbox/bark/openbox-3/: themerc
openbox/sage-dark/openbox-3/: themerc
openbox/sage/openbox-3/: themerc
xfce-notify/: meson.build  sage-dark.css
