option('gtk', type: 'boolean', value: true, description:'build gtk component')
option('default', type: 'boolean', value: true, description:'build bunsen-yaru default flavour')
option('dark', type: 'boolean', value: true, description:'build bunsen-yaru flavour')
option('openbox', type: 'boolean', value: true, description:'build bunsen-yaru openbox assets')
option('xfce-notify', type: 'boolean', value: true, description:'build bunsen-yaru with xfce-notify assets')

# We use the dark flat above to do the dark variants of them
option('accent-colors',
    type: 'array',
    choices: [
        'bark',
        'sage',
    ],
)
